Update common/.config/taskfiles/git/Taskfile.yml, common/.config/taskfiles/git/Taskfile-gitlab.yml, common/.config/taskfiles/fix/Taskfile.yml, common/.config/taskfiles/image/Taskfile.yml, common/.config/taskfiles/docker/Taskfile-build.yml, common/.config/taskfiles/docker/Taskfile-test.yml, common/.config/taskfiles/docker/Taskfile-update.yml, common/.config/taskfiles/ci/Taskfile.yml, common/.config/taskfiles/boilerplate/Taskfile.yml, common/.config/taskfiles/common/Taskfile-update.yml, common/.config/taskfiles/common/Taskfile.yml, common/.config/taskfiles/install/Taskfile-npm.yml, common/.config/taskfiles/install/Taskfile-go.yml, common/.config/taskfiles/install/Taskfile-python.yml, common/.config/taskfiles/install/Taskfile-software.yml, common/.config/taskfiles/install/Taskfile.yml, common/.config/taskfiles/lint/Taskfile.yml, common/.config/taskfiles/nest/Taskfile.yml, common/.config/taskfiles/npm/Taskfile-cov.yml, common/.config/taskfiles/npm/Taskfile-doc.yml, common/.config/taskfiles/ansible/Taskfile.yml, common/.config/taskfiles/ansible/Taskfile-test.yml, common/.config/taskfiles/ansible/Taskfile-populate.yml, common/.config/taskfiles/ansible/Taskfile-playbook.yml, common/.config/taskfiles/ansible/Taskfile-ansibler.yml, common/.config/taskfiles/npm/Taskfile.yml

--- a/common/.config/taskfiles/ansible/Taskfile-playbook.yml
+++ b/common/.config/taskfiles/ansible/Taskfile-playbook.yml
@@ -41,6 +41,7 @@ tasks:
         for ID in {{replace "," " " .DOC_IDS}}; do
           populateChartVar "$TMP" "$ID"
         done
+        .config/log success 'Finished scanning for documentation comments'
 
   environment:
     # @desc_when [ansible/Taskfile-playbook.yml] ansible/playbook
@@ -71,6 +72,7 @@ tasks:
             else
               rm -f $ITEM
               ln -s "./environments/{{.CLI_ARGS}}/$ITEM" "$ITEM"
+              .config/log success "Successfully symlinked `$ITEM` from ./environments/{{.CLI_ARGS}}/$ITEM"
             fi
           done
         {{end}}
@@ -89,6 +91,7 @@ tasks:
             else
               rm -f $ITEM
               ln -s "./environments/$ENVIRONMENT/$ITEM" "$ITEM"
+              .config/log success "Successfully symlinked `$ITEM` from ./environments/$ENVIRONMENT/$ITEM"
             fi
           done
         fi
@@ -149,3 +152,4 @@ tasks:
             git remote add "$ROLE_FOLDER" "$ROLE_SSH_REPO"
           fi
         done
+        .config/log success 'Added git remotes for all the roles in the ./roles folder'
