--- a/common/.config/taskfiles/install/Taskfile-python.yml
+++ b/common/.config/taskfiles/install/Taskfile-python.yml
@@ -7,7 +7,10 @@ tasks:
       - :install:software:python
     run: when_changed
     cmds:
-      - pip3 install {{.PACKAGE}}
+      - |
+        .config/log info 'Installing `{{.PACKAGE}}` with pip3'
+        pip3 install {{.PACKAGE}}
+        .config/log success 'Successfully installed pip3 package named `{{.PACKAGE}}`'
     status:
       - type {{.PACKAGE}} &> /dev/null
 
@@ -40,7 +43,10 @@ tasks:
       - :install:software:poetry
     run: once
     cmds:
-      - poetry install
+      - |
+        .config/log info 'Running `poetry install`'
+        poetry install
+        .config/log success '`poetry install` completed successfully'
     sources:
       - pyproject.toml
     preconditions:
