--- a/common/.config/taskfiles/install/Taskfile-python.yml
+++ b/common/.config/taskfiles/install/Taskfile-python.yml
@@ -12,7 +12,20 @@ tasks:
         pip3 install {{.PACKAGE}}
         .config/log success 'Successfully installed pip3 package named `{{.PACKAGE}}`'
     status:
-      - type {{.PACKAGE}} &> /dev/null
+      - type {{.PACKAGE}} > /dev/null
+
+  pipx:
+    deps:
+      - :install:software:python
+    run: when_changed
+    cmds:
+      - task: :install:software:pipx
+      - |
+        .config/log info 'Installing `{{.PACKAGE}}` with pipx'
+        pipx install {{.PACKAGE}}
+        .config/log success 'Successfully installed `{{.PACKAGE}}` with pipx'
+    status:
+      - type {{.PACKAGE}} > /dev/null
 
   pytest:
     run: once
