Update common/.config/taskfiles/upstream/Taskfile.yml, common/.config/taskfiles/git/Taskfile.yml, common/.config/husky/prepare-commit-msg, common/.config/taskfiles/ansible/Taskfile.yml

--- a/common/.config/taskfiles/ansible/Taskfile.yml
+++ b/common/.config/taskfiles/ansible/Taskfile.yml
@@ -56,6 +56,12 @@ tasks:
       - '{{.FILE_PATH}}'
       - '{{.VARIABLES_PATH}}'
 
+  galaxy:import:
+    cmds:
+      - |
+        GITHUB_ROLE_SLUG="$(jq -r '.blueprint.repository.github' package.json | sed 's/.*\///')"
+        ansible-galaxy role import --token "$ANSIBLE_GALAXY_TOKEN" {{.GITHUB_ORG}} "$GITHUB_ROLE_SLUG"
+
   galaxy:requirements:
     run: once
     cmds:
