--- a/common/.config/taskfiles/git/Taskfile.yml
+++ b/common/.config/taskfiles/git/Taskfile.yml
@@ -39,6 +39,11 @@ env:
     sh: if [[ "${container:=}" == 'docker' ]]; then echo "0"; else echo "1"; fi
 
 tasks:
+  commit:automated:
+    cmds:
+      - git add --all
+      - HUSKY=0 git commit -m "☁️ Automation" -n
+
   convert:folder:submodule:
     deps:
       - :git:github:update
@@ -67,6 +72,8 @@ tasks:
     preconditions:
       - sh: '[[ ! $(git rev-parse --git-dir) =~ ".git/modules" ]]'
         msg: Cannot convert the directory to a submodule - the directory already appears to be a submodule.
+
+  push:all: git push all master
 
   remotes:
     deps:
