--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -44,6 +44,9 @@ tasks:
       - task: :upstream:project:merge:package:overrides
       - task: :common:update:update
       - task: :fix:eslint
+      - task: :git:commit:automated
+      - task: :git:push:all
+      - task: :{{if eq .REPOSITORY_SUBTYPE "role"}}ansible:galaxy:import{{else}}donothing{{end}}
 
   shared:
     cmds:
