Update .config/Brewfile, common/.config/taskfiles/lint/Taskfile.yml, common/.config/taskfiles/install/Taskfile-software.yml

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -11,6 +11,7 @@ brew "act"
 brew "appium"
 brew "bat"
 brew "bitwarden-cli"
+brew "codeclimate/formulae/codeclimate"
 brew "croc"
 brew "curl"
 brew "dasel"
