--- a/common/.config/taskfiles/git/Taskfile.yml
+++ b/common/.config/taskfiles/git/Taskfile.yml
@@ -41,8 +41,11 @@ env:
 tasks:
   commit:automated:
     cmds:
-      - git add --all
-      - HUSKY=0 git commit -m "☁️ Automation" -n
+      - |
+        if [ "$FULLY_AUTOMATED_TASKS" == 'true' ]; then
+          git add --all
+          HUSKY=0 git commit -m "☁️ Automation" -n
+        fi
 
   convert:folder:submodule:
     deps:
@@ -73,7 +76,12 @@ tasks:
       - sh: '[[ ! $(git rev-parse --git-dir) =~ ".git/modules" ]]'
         msg: Cannot convert the directory to a submodule - the directory already appears to be a submodule.
 
-  push:all: git push all master
+  push:all:
+    cmds:
+      - |
+        if [ "$FULLY_AUTOMATED_TASKS" == 'true' ]; then
+          git push all master
+        fi
 
   remotes:
     deps:
