--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -304,6 +304,29 @@ tasks:
         vars:
           FORMULAE: exiftool
 
+  gcloud:
+    run: once
+    cmds:
+      - task: gcloud:{{OS}}
+    status:
+      - type gcloud > /dev/null
+
+  gcloud:darwin:
+    cmds:
+      - task: brew:cask
+        vars:
+          CASK: google-cloud-sdk
+
+  gcloud:linux:
+    cmds:
+      - task: :install:install-doctor
+        vars:
+          SOFTWARE: googlecloudsdk
+
+  gcloud:windows:
+    cmds:
+      - task: common:windows
+
   gh:
     run: once
     cmds:
