--- a/common/.config/taskfiles/install/Taskfile-npm.yml
+++ b/common/.config/taskfiles/install/Taskfile-npm.yml
@@ -1,5 +1,5 @@
 ---
-# eslint-disable max-lines, eslint-comments/disable-enable-pair
+# eslint-disable eslint-comments/disable-enable-pair, max-lines
 version: '3'
 
 tasks:
