--- a/common/.config/taskfiles/install/Taskfile-npm.yml
+++ b/common/.config/taskfiles/install/Taskfile-npm.yml
@@ -1,5 +1,5 @@
 ---
-# eslint-disable eslint-comments/disable-enable-pair, max-lines
+# eslint-disable eslint-comments/disable-enable-pair, max-lines, json-schema-validator/no-invalid
 version: '3'
 
 tasks:
