--- a/common/.config/taskfiles/ansible/Taskfile-test.yml
+++ b/common/.config/taskfiles/ansible/Taskfile-test.yml
@@ -201,6 +201,7 @@ tasks:
       - :install:python:requirements
     cmds:
       - |
+        .config/log info 'Running Molecule test over SSH'
         EXIT_CODE=0
         {{.PYTHON_HANDLE}}molecule test -s remote || EXIT_CODE=$?
         if [ "$EXIT_CODE" != '0' ]; then
