--- a/.config/taskfiles/upstream/Taskfile.yml
+++ b/.config/taskfiles/upstream/Taskfile.yml
@@ -62,6 +62,11 @@ tasks:
 
   shared:
     cmds:
+      - |
+        if [ ! -n "$(grep "^gitlab.com " ~/.ssh/known_hosts)" ] || [[ "${container:=}" == "docker" ]]; then
+          ssh-keyscan gitlab.com >> ~/.ssh/known_hosts 2>/dev/null
+          git config url."https://gitlab.com/".insteadOf git@gitlab.com:
+        fi
       - git pull
       - task: :upstream:shared:copy
       - task: :upstream:shared:variables
