Update common/.config/taskfiles/install/Taskfile-software.yml, common/.config/taskfiles/install/Taskfile-python.yml, common/.gitlab/ci/test/ansible/role.gitlab-ci.yml, common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml, common/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml, common/.gitlab/ci/test/ansible/playbook.gitlab-ci.yml

--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -106,7 +106,7 @@ tasks:
           exit 1
         fi
     status:
-      - type brew &> /dev/null
+      - type brew &> /dev/null || [ "$OPTIMIZED_IMAGE" == 'true' ]
 
   brew:utils:
     cmds:
@@ -168,6 +168,8 @@ tasks:
           fi
     cmds:
       - task: common:linux:{{.LINUX_FAMILY}}
+    status:
+      - '[[ "$OPTIMIZED_IMAGE" == "true" ]]'
 
   common:linux:archlinux:
     interactive: true
