--- a/common/.config/taskfiles/install/Taskfile-python.yml
+++ b/common/.config/taskfiles/install/Taskfile-python.yml
@@ -49,6 +49,8 @@ tasks:
       - task: requirements:poetry:prereqs
       - task: requirements:poetry
       - task: :{{if eq .REPOSITORY_TYPE "ansible"}}ansible:galaxy:requirements{{else}}donothing{{end}}
+    status:
+      - '[[ "$OPTIMIZED_IMAGE" == "true" ]]'
 
   requirements:poetry:
     deps:
