--- a/common/.gitlab/ci/test/ansible/role.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/role.gitlab-ci.yml
@@ -36,6 +36,7 @@ test:molecule:linux:
     DOCKER_TLS_CERTDIR: /certs
     DOCKER_TLS_VERIFY: 1
     GIT_DEPTH: 1
+    OPTIMIZED_IMAGE: false
   before_script:
     - |
       if [ "$CI_COMMIT_BRANCH" == 'test/linux' ]; then
