--- a/common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml
@@ -21,6 +21,8 @@ test:molecule:darwin:
   needs: []
   tags:
     - shared-macos-amd64
+  variables:
+    OPTIMIZED_IMAGE: false
   script:
     - |
       if [ "$CI_COMMIT_BRANCH" == 'test/darwin' ]; then
