--- a/common/.gitlab/ci/test/ansible/role.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/role.gitlab-ci.yml
@@ -2,7 +2,7 @@
 test:molecule:linux:
   stage: test
   image:
-    name: docker:20.10.7
+    name: megabytelabs/ansible-molecule-ubuntu-20.04:latest
     entrypoint: ['']
   services:
     - docker:20.10.7-dind
