--- a/common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml
@@ -22,7 +22,7 @@ test:molecule:darwin:
   tags:
     - shared-macos-amd64
   variables:
-    OPTIMIZED_IMAGE: false
+    OPTIMIZED_IMAGE: 'false'
   script:
     - |
       if [ "$CI_COMMIT_BRANCH" == 'test/darwin' ]; then
