--- a/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml
+++ b/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml
@@ -35,7 +35,7 @@ test:molecule:darwin:
     - brew install node python@3.10 poetry
     - bash .config/scripts/start.sh
     - task environment -- dev
-    - task ansible:test:molecule:local:test
+    - OPTIMIZED_IMAGE=false task ansible:test:molecule:local:test
   artifacts:
     when: always
     reports:
