Update common/.config/taskfiles/ansible/Taskfile.yml, common/.config/taskfiles/install/Taskfile-python.yml, common/Taskfile.yml.liquid, common/.config/taskfiles/common/Taskfile-update.yml, common/.config/taskfiles/upstream/Taskfile.yml, common/.config/taskfiles/install/Taskfile.yml

--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -75,7 +75,7 @@ tasks:
             git config url."https://gitlab.com/".insteadOf git@gitlab.com:
           fi
         fi
-      - cmd: git pull --ff-only
+      - cmd: if git branch -r | grep origin > /dev/null; then git pull --ff-only; fi
         ignore_error: true
       - cmd: git config --unset url."https://gitlab.com/".insteadOf
         ignore_error: true
