--- a/common/.config/taskfiles/install/Taskfile-python.yml
+++ b/common/.config/taskfiles/install/Taskfile-python.yml
@@ -92,6 +92,8 @@ tasks:
         fi
 
   venv:node:
+    deps:
+      - :install:software:python
     log:
       error: Encountered error while setting up `.venv` environment.. Is Python 3 installed?
       start: Setting up a Python 3 `.venv`
